Allow creation of multiple numbers. Fixed a bug with adding numbers or other inputs from the CLI.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -175,6 +175,10 @@ console.log('createBlockAtCursor('+xmlStr+')');
     if(insertBlockBefore == false) {
       if(topBlocks.length > 1) {
         var lastBlockAdded = topBlocks[topBlocks.length-1];
+        if(lastBlockAdded.outputConnection !== null) {
+          console.log("Just leaving this block unconnected, since it's an output.",lastBlockAdded);
+          return;
+        }
         if(selectedBlock.nextConnection.targetConnection === null) {
           selectedBlock.nextConnection.connect(lastBlockAdded.previousConnection);
         } else {
