Now you can sketch in 2D in another online tool, and get the output into your UltiShaper. It instantly updates, and you can decide what you want to do with the polyline (e.g. extrude it). http://www.youtube.com/watch?v=gogJLELiPdw

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -36,6 +36,7 @@ if(typeof urlLang !='string' || urlLang == '')
   <script type="text/javascript" src="lib/blockly/blockly_compressed.js"></script>
   <script type="text/javascript" src="assets/js/utils.js"></script><!-- Various utilities -->
   <script type="text/javascript" src="assets/js/history.js"></script><!-- Undo/Redo -->
+  <script type="text/javascript" src="assets/js/2dcanvas.js"></script><!-- 2D canvas tool -->
   <script type="text/javascript" src="assets/js/cli.js"></script><!-- Command line interface -->
   <script type="text/javascript" src="lib/blockly/language/en/_messages.js"></script>
   <script type="text/javascript" src="lib/blockly/language/common/math.js"></script>
