- block selection /manipulation fixes:  * added injection of blockIsSelected etc methods into "window" as a workaround to get all block manipulations to work as intended

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -31,6 +31,10 @@ try
 if(typeof urlLang !='string' || urlLang == '') 
   urlLang = 'EN_EN';
 
+function var_to_number(varStr){
+ return (1*varStr.substring(1,varStr.length-1));
+}
+
 </script>
     <script type="text/javascript" src="/translations.js"></script>
   <!--
