Improved the UI. Removed some unwanted blackly UI Elements and hides the hierarchyEditor until it's really showing a useful tree. Readded some important CSS for the CLI drop down.

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -89,6 +89,30 @@ function var_to_number(varStr){
         height: 100%;
         width: 100%;
       }
+
+
+#qsResults 
+{
+  z-index: 99999;
+  top: 27px;
+  left:180px;
+  position: absolute;
+  background-color: #fff;
+  border: 1px #aaa solid;
+  border-radius: 4px;
+  padding: 4px;
+}
+.qsItem 
+{
+  background-color: white;
+  width: 100%;
+  cursor: hand;
+  min-width: 210px;
+}
+.qsSelected {
+  color: white;
+  background-color: blue;
+}
 </style>
 
 </head>
