--- a/public/app/index.html
+++ b/public/app/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>UltiCreator Blocks</title>
+  <title>UltiShaper - The easiest drag-and-drop parametric 3D modeling tool</title>
   
   <script type="text/javascript" src="assets/js/localization.js"></script>
 
